--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 			<header class="major">
 				<h2>Quieres saber mas acerca de este proyecto?</h2>
 			</header>
-			<p>CSontactanos y atenderemos tus dudas.</p>
+			<p>Contactanos y atenderemos tus dudas.</p>
 			<ul class="actions special">
 				<li><a href="#" class="button wide">Comunicate con nosotros</a></li>
 			</ul>
